--- a/alpine/alpinestyle.css
+++ b/alpine/alpinestyle.css
@@ -91,7 +91,9 @@ h3 {
     cursor: pointer;
     display: flex;
     align-items: center; /* Centrerar texten vertikalt */
-    justify-content: center; /* Centrerar texten horisontellt */
+    justify-content: flex-start;
+    gap: 10px;
+    text-align: left;
     margin-bottom: 10px; /* Samma avstånd mellan alla knappar */
     text-align: center;
     transition: background-color 0.3s ease-in-out;
@@ -117,6 +119,9 @@ h3 {
     align-items: center;
     gap: 8px;
     width: 100%; /* Knappen tar hela bredden */
+    justify-content: flex-start;
+    gap: 10px;
+    text-align: left;
 }
 
 [x-cloak] {
@@ -298,4 +303,6 @@ h3 {
     border-radius: 6px;
     font-size: 16px;
   }
+
+
 
