--- a/basline/baselinestyle.css
+++ b/basline/baselinestyle.css
@@ -62,6 +62,7 @@ h1 {
 h2 {
   text-align: center;
   font-size: 24px;
+  margin-right: 65%;
 }
 
 h3 {
@@ -249,4 +250,45 @@ body.darkmode .dropdown-menu a {
 
 body.darkmode .dropdown-menu a:hover {
   background-color: #b0b0b0;
+}
+
+.text-box {
+  font-size: 16px;
+  max-width: 600px;
+  line-height: 1.6;
+  background-color:  #eff5f8;
+  padding: 15px;
+  border-radius: 8px;
+  transition: font-size 0.3s ease;
+}
+
+
+
+.btniconbig{
+  border-radius: 3px;
+  border-color: #2a92c2;
+  background-color: #2a92c2;
+  padding: 6px;
+  cursor: pointer;
+
+}
+.btniconsmall{
+  border-radius: 3px;
+  border-color: #2a92c2;
+  background-color: #2a92c2;
+  padding: 6px;
+  cursor: pointer;
+}
+.text-zoom {
+  display: flex;
+  justify-content: flex-end; 
+  gap: 10px; 
+  margin-right: 30px;
+  margin-top: 6%;
+}
+
+.hemText{
+  margin-top:0px;
+  display: flex;
+  position: relative;
 }
