--- a/basline/baselinestyle.css
+++ b/basline/baselinestyle.css
@@ -198,11 +198,11 @@ body.darkmode #banner {
   color: white;
 }
 body.darkmode .btnkontrast {
-  background-color: #595959;
   color: white;
+  background-color: #3d3d3d;
 }
 body.darkmode .btnkontrast:hover {
-  background-color: #3d3d3d;
+  background-color: rgb(54, 54, 54);
 }
 body.darkmode .contentpage {
   background-color: #d6d6d6;
@@ -262,8 +262,6 @@ body.darkmode .dropdown-menu a:hover {
   transition: font-size 0.3s ease;
 }
 
-
-
 .btniconbig{
   border-radius: 3px;
   border-color: #2a92c2;
@@ -279,6 +277,7 @@ body.darkmode .dropdown-menu a:hover {
   padding: 6px;
   cursor: pointer;
 }
+
 .text-zoom {
   display: flex;
   justify-content: flex-end; 
@@ -292,3 +291,51 @@ body.darkmode .dropdown-menu a:hover {
   display: flex;
   position: relative;
 }
+
+#bild{
+  border: 4px solid rgb(117, 2, 2);
+  width: 200px;
+  height: 500px;
+  object-fit: cover;
+}
+
+.hem {
+  display: flex;
+  gap: 20px; 
+  margin-top: 20px;
+}
+
+body.darkmode .text-box {
+  background-color: #d6d6d6;
+  color: black;
+}
+
+body.darkmode .btniconbig{
+  background-color: #595959;
+  color: white;
+  border-color: #3d3d3d;
+}
+
+body.darkmode .btniconsmall{
+  background-color: #595959;
+  color: white;
+  border-color: #3d3d3d;
+}
+
+body.darkmode .btniconbig:hover{
+  background-color: #3d3d3d;
+  color: white;
+  border-color: #3d3d3d;
+
+}
+body.darkmode .btniconsmall:hover{
+  background-color: #3d3d3d;
+  color: white;
+  border-color: #3d3d3d;
+}
+
+.page {
+  display: none;
+}
+
+
